--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
